# yakaizen

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: notes.txt
kaizen/: kz.py
kaizen/agent/: __init__.py
kaizen/agents/: echo.py  send.py
kaizen/core/: __init__.py
pingpong/: ping.py  pingpong-remote.cfg  pingpong.cfg  pp.db
yakaizen/: ether_proxy.py  ether_sqlite.py  kz.py
yakaizen/agent/: __init__.py
yakaizen/agents/: echo.py  fortune.py  send.py
yakaizen/core/: __init__.py
