[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="yakaizen"
version="0.1"
requires-python=">= 3.9"
authors = [
        {name="Sreepathi Pai", email="sree@cs.rochester.edu"},
]
description="A framework for agent-based workflows."
license="MIT"

[tool.setuptools]
packages=['yakaizen']

[project.scripts]
kz="yakaizen.kz:main"
kza-echo="yakaizen.agents.echo:main"
kza-fortune="yakaizen.agents.fortune:main"
kza-send="yakaizen.agents.send:main"
kz-proxy="yakaizen.ether_proxy:main"

